# quizdom

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  OVERVIEW.md  PROMPT_HISTORY.md  metadata.yaml  oplog.yaml
.aida/: config.toml  dispenser.toml  node.toml
.claude/: AIDA.md  settings.json
.claude/commands/: aida-advise.md  aida-architecture.md  aida-backlog-groom.md  aida-capture.md  aida-code-review.md  aida-commit.md  aida-compiler-warnings.md  aida-decompose.md  aida-digest.md  aida-doc.md  aida-docs-review.md  aida-docs.md  aida-doctor.md  aida-drain-queue.md  aida-ecosystem-scan.md  aida-evaluate.md  aida-glossary.md  aida-grill.md  aida-implement.md  aida-import-plan.md  aida-learn.md  aida-onboard.md  aida-pickup.md  aida-plan.md  aida-pr.md  aida-punt.md  aida-queue.md  aida-rebase.md  aida-release.md  aida-req.md  aida-review.md  aida-search.md  aida-sprint.md  aida-standup.md  aida-status.md  aida-sync.md  aida-techdebt.md  aida-test.md  aida-triage.md
.claude/hooks/: aida-git-guardrails.sh  aida-role-context.sh  aida-track-commits.sh  (+1 more)
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  claude_cli.rs  lib.rs
crates/quizdom/: Cargo.toml
crates/quizdom/src/: bank.rs  contradiction.rs  editor.rs  error.rs  frontend.rs  honing.rs  input.rs  keymap.rs  lib.rs  main.rs  markdown.rs  model.rs  observer.rs  palette.rs  persist.rs  question_add.rs  session.rs  settings.rs  signals.rs  spinner.rs  strategy.rs  style.rs  synopsis.rs  tests.rs  transcript.rs  tui.rs
docs/: extending-skills.md
registry/: agreed_counters.toml  blocks.yaml  nodes.toml
(+285 files in other folders)
