[package]
name = "quizdom"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.29"
llm = { path = "../llm" }
ratatui = "0.30.1"
rustyline = "15"
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
