[package]
name = "quizdom"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.29"
llm = { path = "../llm" }
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = "0.30.1"
rustyline = "15"
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
# trace:STORY-180 | ai:claude — the TUI free-text editor widget (the analog of
# rustyline for the headless line front-end). The `-2` fork tracks ratatui 0.30
# (shares ratatui-core 0.1 + crossterm 0.29 with the rest of the workspace); the
# library name stays `tui_textarea`.
tui-textarea = { package = "tui-textarea-2", version = "0.11" }
